Update run scripts